<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">رنگ بازی</string>
    <string name="action_settings">تنظیمات</string>
    <string name="points_text">امتیاز</string>
    <string name="level_text">مرحله</string>
    <string name="start_button_text">شروع</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="play_game_button_text">شروع بازی</string>
    <string name="scoreboard_button_text">جدول امتیازات</string>
    <string name="title_activity_scoreboard">جدول امتیازات</string>
    <string name="game_help">رنگ روشن تر را سریعا لمس کنید !</string>
    <string name="game_over">بازی تمام شد</string>
    <string name="retry_game">شروع مجدد</string>
    <string name="main_menu">منوی اصلی</string>
    <string name="tagline1">ها</string>
    <string name="tagline2">رنگ</string>
    <string name="tagline3">بازی</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="hello_world">سلام!</string>
    <string name="preference_file_key">com.example.prakharsriv.colorphun.PREFERENCES_FILE</string>
    <string name="APP_ID">327910424750</string>
    <string name="LEADERBOARD_ID">CgkIroHwx8UJEAIQAQ</string>
    <string name="highscore">رکورد جدید !</string>
    <string name="best_label">بهترین</string>
    <string name="sign_out">خروج</string>
    <string name="sign_in">ورود</string>
    <string name="signin_help">Please sign in to earn achievements and participate in global leaderboards</string>
    <string name="signin_help_title">ورود</string>
    <string name="ACHIEVEMENT_NOVICE_ID">CgkIroHwx8UJEAIQAg</string>
    <string name="ACHIEVEMENT_LUCK_ID">CgkIroHwx8UJEAIQAw</string>
    <string name="ACHIEVEMENT_CASUAL_ID">CgkIroHwx8UJEAIQBA</string>
    <string name="ACHIEVEMENT_CENTURION_ID">CgkIroHwx8UJEAIQBQ</string>
    <string name="ACHIEVEMENT_DETAILEYE_ID">CgkIroHwx8UJEAIQBg</string>
    <string name="ACHIEVEMENT_TAPMASTER_ID">CgkIroHwx8UJEAIQCg</string>
    <string name="ACHIEVEMENT_GODLIKE_ID">CgkIroHwx8UJEAIQCw</string>
    <string name="ACHIEVEMENT_LONGTIMER_ID">CgkIroHwx8UJEAIQDQ</string>
    <string name="ACHIEVEMENT_COLORBLIND_ID">CgkIroHwx8UJEAIQDg</string>
    <string name="ACHIEVEMENT_IMPOSSIBLE_ID">CgkIroHwx8UJEAIQDw</string>
    <string name="title_activity_easy_game">EasyGameActivity</string>
    <string name="title_activity_hard_game">HardGameActivity</string>

</resources>
