<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gray"
    android:orientation="vertical">

    <!-- sign-in button -->
    <!--<com.google.android.gms.common.SignInButton-->
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:visibility="invisible"/>

    <!-- sign-out button -->
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/sign_out"
        android:textColor="@color/red"
        android:textSize="14dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tagline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/tagline1"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tagline_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/tagline2"
            android:textColor="@color/red"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tagline_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tagline3"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/play_game_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/play_button"
        android:onClick="playGame" />

</LinearLayout>