<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_bg"
              android:orientation="vertical"
              android:paddingBottom="20dp"
              android:paddingLeft="80dp"
              android:paddingRight="80dp"
              android:paddingTop="20dp">

    <TextView
        android:id="@+id/game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="@color/blue_gray"
        android:textSize="35sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/level_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Level 1"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/points_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/blue_gray"
        android:padding="10dp"
        android:text="124"
        android:textColor="@color/yellow"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/highscore_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/highscore"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/best_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/best_label"
            android:textColor="@color/blue_gray"/>

        <TextView
            android:id="@+id/best_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="176"
            android:textColor="@color/red"
            android:textSize="36sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/games_leaderboards"
            android:onClick="showLeaderboard"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/games_achievements"
            android:onClick="showAchievements"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/replay_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/replay_button"
        android:onClick="playGame"
        android:text="@string/retry_game"
        android:textSize="15sp"/>

</LinearLayout>
